# CameraLidarCalibrationTool

./: LICENSE  README.md  calibration.cpp  image_rectifier_node.cpp  markdown.md
calibration_tool/rviz_calibration/: CMakeLists.txt  package.xml  plugin_description.xml
calibration_tool/rviz_calibration/config/: tags.yaml
calibration_tool/rviz_calibration/data/: points.txt
calibration_tool/rviz_calibration/msg/: AprilTagDetection.msg  AprilTagPoint.msg
calibration_tool/rviz_calibration/src/: ThreadSafeQueue.h  apriltags.cpp  apriltags.h  calibration.cpp  calibration.h  calibration.ui  calibration.ui.autosave  convert_image.h  fisheye.h  line.cpp  mainwindow.cpp  mainwindow.h  paintwidget.h  rect.cpp  rect.h  view.cpp  view.h
nio_calibration_tool/: CMakeLists.txt  package.xml
nio_calibration_tool/include/nio_calibration_tool/: CalibBoardDetectionNode.h  CalibBoardDetector.h
nio_calibration_tool/launch/: lidar_calib_board_detection.launch
nio_calibration_tool/src/: CalibBoardDetectionNode.cpp  CalibBoardDetector.cpp
rviz_calibration/: CMakeLists.txt  package.xml  plugin_description.xml
rviz_calibration/data/: points.txt
rviz_calibration/src/: calibration.cpp  calibration.h  calibration.ui  convert_image.h  line.cpp  line.h  mainwindow.cpp  mainwindow.h  paintwidget.cpp  paintwidget.h  rect.h  shape.cpp  shape.h  view.cpp  view.h
